adds comments to the html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor saepe quam sint, quasi maiores quibusdam impedit assumenda non ullam in, consectetur rem optio quo. Quae expedita minima asperiores non provident!</p>
             <a href="files/free-guide.pdf" target="_blank">Download the free grooming guide.</a>
+            <!-- rating section starts -->
             <section>
                 <h3>Rate your experience</h3>
                 <p>We would love to know how you like Pawrfect Grooming.</p>
@@ -38,10 +39,11 @@
                 </div>
                 <a class="google" href="https://google.com">Leave a review on Google</a>
             </section>
+            <!-- rating section ends -->
         </main>
         <footer>
             <p>&copy; Copyright, 2023</p>
         </footer>
-    </div>
+    </div><!--closes .container-->
 </body>
 </html>
